--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand">Andamio</a>
+    <a class="navbar-brand">CasaMarruecos</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
       aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -16,28 +16,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLinkActive="active"
-            routerLink="admin/developer/plist">Developers</a>
+            routerLink="admin/usuario/plist">Usuarios</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLinkActive="active"
-            routerLink="admin/usertype/plist">Usertypes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="admin/team/plist">Team</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="admin/help/plist">Help</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLinkActive="active"
-            routerLink="admin/resolution/plist">Resolution</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="admin/task/plist">Task</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="admin/project/plist">Project</a>
-        </li>
+
       </ul>
       <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
