--- a/src/app/component/shared/routed/login/login.component.html
+++ b/src/app/component/shared/routed/login/login.component.html
@@ -1,46 +1,54 @@
-<div class="container-fluid">
-  <div class="row d-flex justify-content-center align-items-center m-5">
+<div class="container">
 
-    <div class="col">
+    <div class="row justify-content-center">
 
-    
+        <div class="col-md-5 text-center">
+            <div class="bg-light mt-5 p-5">
+                <img class="my-3" src="assets/img/wildCartLogo100.png" width="100">
+                <form [formGroup]="formularioLogin" (ngSubmit)="onSubmit()" novalidate class="row g-3">
+                    <h4><i [ngClass]="oMetadataService.getIcon(this.strOperation)"></i> entrada al sistema</h4>
+                    <div class="col-12 text-start">
+                        <label for="username" class="form-label">Nombre de usuario</label>
+                        <div class="input-group has-validation">
+                            <input type="text" formControlName="login" id="username" class="form-control"
+                                placeholder="Nombre de usuario"
+                                [class.is-invalid]="formularioLogin.get('login')!.dirty && formularioLogin.get('login')!.invalid">
+                            <div class="invalid-feedback"
+                                *ngIf="!formularioLogin.get('login').errors?.['minlength'] || formularioLogin.get('login').dirty">
+                                La longitud mínima es 5
+                            </div>
 
-        <div class="d-flex flex-row justify-content-center">
-          <div class="card p-5" style="width: 25rem;">
-          <form style="width:fit-content" [formGroup]="oFormularioLogin">
+                        </div>
+                    </div>
+                    <div class="col-12 text-start">
+                        <label for="password" class="form-label">Contraseña</label>
+                        <input type="password" formControlName="password" id="password" name="password"
+                            class="form-control" placeholder="Contraseña"
+                            [class.is-invalid]="formularioLogin.get('password')!.dirty && formularioLogin.get('password')!.invalid"
+                            required>
+                        <div class="invalid-feedback"
+                            *ngIf="!formularioLogin.get('password').errors?.['required'] || formularioLogin.get('password').dirty">
+                            Por favor introduce la contraseña</div>
+                        <div class="invalid-feedback"
+                            *ngIf="!formularioLogin.get('password').errors?.['minlength'] || formularioLogin.get('password').dirty">
+                            La longitud mínima es 5
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="control-group text-center mt-3">
+                            <button type="submit" class="btn btn-primary"><i [ngClass]="oMetadataService.getIcon(this.strOperation)"></i>
+                                Acceder</button>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="control-group text-center mt-3">
+                            <button class="btn btn-danger m-2" (click)="loginAdmin()"><i [ngClass]="oMetadataService.getIcon(this.strOperation)"></i> admin/wildcart</button>
+                            <button class="btn btn-success m-2" (click)="loginUser()"><i [ngClass]="oMetadataService.getIcon(this.strOperation)"></i> user/wildcart</button>
+                        </div>
+                    </div>
+                </form>
 
-            <div class="d-flex flex-row align-items-center justify-content-start ">
-              <p class="lead fw-normal my-5">LOGIN</p>
             </div>
-
-            <!-- username input -->
-            <div class="form-outline mb-4">
-              <label class="form-label" for="login">Username</label>
-              <input type="text" id="username" class="form-control" placeholder="Enter a username" name="username"
-                formControlName="username" />
-
-            </div>
-
-            <!-- Password input -->
-            <div class="form-outline mb-3">
-              <label class="form-label" for="password">Password</label>
-              <input type="password" id="password" class="form-control" placeholder="Enter password" name="password"
-                formControlName="username" />
-            </div>
-
-            <div class="text-center text-lg-start mt-4 pt-2">
-              <button type="button" class="btn btn-primary" style="padding-left: 2.5rem; padding-right: 2.5rem;"
-                (click)="login()">Login</button>
-            </div>
-
-            <div class="text-center text-lg-start mt-4 pt-2">
-              <button type="button" class="btn btn-warning" style="padding-left: 2.5rem; padding-right: 2.5rem;"
-                (click)="loginAsAdmin()">Login as admin</button>
-            </div>
-
-          </form>
         </div>
-      </div>
     </div>
-  </div>
 </div>
