--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -15,12 +15,15 @@
             *ngIf="!strUserName">Login</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="logout">Logout</a>
+          </li>
+        <li class="nav-item">
           <a class="nav-link" aria-current="page" routerLinkActive="active"
             routerLink="admin/usuario/plist">Usuarios</a>
         </li>
 
+
       </ul>
-      
 
     </div>
   </div>
