new con OnetoMany hecho

--- a/src/app/component/application/usuario/routed/usuario-view-admin-routed/usuario-view-admin-routed.component.html
+++ b/src/app/component/application/usuario/routed/usuario-view-admin-routed/usuario-view-admin-routed.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col">
-            <h1 class="text-center mb-5">Vista del Usuario con id={{id}}</h1>
+            <h1 class="text-center mb-5">Vista del Usuario</h1>
             <app-usuario-detail-admin-unrouted [id]="id"></app-usuario-detail-admin-unrouted>
         </div>
     </div>
