--- a/src/app/component/application/usuario/routed/usuario-new-admin-routed/usuario-new-admin-routed.component.html
+++ b/src/app/component/application/usuario/routed/usuario-new-admin-routed/usuario-new-admin-routed.component.html
@@ -131,7 +131,8 @@
                 <span class="input-group-text">{{tipousuarioDescription}}</span>
                 <input type="text" class="form-control" formControlName="id_tipousuario"
 
-                (keyup)="updatetipousuarioDescription(oForm.controls.id_tipousuario.value)"
+
+                (keyup)="updateTipousuarioDescription(oForm.controls.id_tipousuario.value)"
 
                 [ngClass]="{'is-valid' :
                 oForm.controls.id_tipousuario.dirty && !oForm.controls.id_tipousuario.errors?.['required'] &&
@@ -174,6 +175,25 @@
         <div class="modal-body">
 
           {{modalContent}}
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="findTipousuario" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">{{modalTitle}}</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+
+          <app-tipousuario-finder-admin-unrouted (closeEvent)="closeTipousuarioModal($event)"></app-tipousuario-finder-admin-unrouted>
 
         </div>
         <div class="modal-footer">
