--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -21,6 +21,10 @@
           <a class="nav-link" aria-current="page" routerLinkActive="active"
             routerLink="admin/usuario/plist">Usuarios</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLinkActive="active"
+              routerLink="generate">Generate</a>
+          </li>
 
 
       </ul>
