tipousuario crud completo

--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -23,6 +23,10 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active"
+              routerLink="admin/tipousuario/plist">Tipo Usuario</a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLinkActive="active"
               routerLink="generate">Generate</a>
           </li>
 
