--- a/src/app/component/application/tipousuario/routed/tipousuario-edit-admin-routed/tipousuario-edit-admin-routed.component.html
+++ b/src/app/component/application/tipousuario/routed/tipousuario-edit-admin-routed/tipousuario-edit-admin-routed.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="row">
       <div class="col">
-        <h1 class="text-center mb-5">Edición de Developer</h1>
+        <h1 class="text-center mb-5">Edición de Tipo Usuario</h1>
 
         <form novalidate [formGroup]="oForm" *ngIf="oForm" (ngSubmit)="onSubmit()">
 
