--- a/src/app/component/application/usuario/unrouted/usuario-finder-admin-unrouted/usuario-finder-admin-unrouted.component.html
+++ b/src/app/component/application/usuario/unrouted/usuario-finder-admin-unrouted/usuario-finder-admin-unrouted.component.html
@@ -3,9 +3,8 @@
       <div class="col">
         <h1 class="text-center mb-5">Lista de usuarios</h1>
         <div class="col-md text-end d-flex justify-content-center align-items-center mb-3 ">
-          <a [routerLink]="['/admin/usuario/new']" class="btn btn-primary mx-3">Alta de usuario</a>
           <app-search-unrouted [placeHolder]="'Buscar usuario'" (onSearch)="setFilter( $event )"></app-search-unrouted>
-          <app-dropdown-register-page class="mx-2" [PageSize]="responseFromServer.size"
+          <app-dropdown-register-page class="mx-2" [PageSize]="responseFromServer.numberOfElements"
           (eeRpp)="this.setRpp($event)">
         </app-dropdown-register-page>
         </div>
@@ -36,7 +35,6 @@
               <th (click)="setOrder('apellido2')">Apellido2</th>
               <th (click)="setOrder('email')">Email</th>
               <th (click)="setOrder('usuario')">Usuario</th>
-              <th (click)="setOrder('tipousuario')">Tipo Usuario</th>
               <th>Acciones</th>
             </tr>
           </thead>
@@ -52,16 +50,10 @@
                 {{usuario.tipousuario.id}}-{{usuario.tipousuario.nombre}}</td>
               <td>
                 <div class="btn-group" role="group" aria-label="Herramientas">
-                  <button class="btn btn-sm btn-primary" [routerLink]="['/admin/usuario/view',usuario.id]">
-                    <fa-icon [icon]="faEye"></fa-icon>
-                  </button>
-                  <button class="btn btn-sm btn-warning" [routerLink]="['/admin/usuario/edit',usuario.id]">
-                    <fa-icon [icon]="faUserPen"></fa-icon>
-                  </button>
-                  <button class="btn btn-sm btn-danger" [routerLink]="['/admin/usuario/remove',usuario.id]">
-                    <fa-icon [icon]="faTrash"></fa-icon>
-                  </button>
-                </div>
+                    <button class="btn btn-sm btn-primary" (click)="selectionUsuario(usuario.id)">
+                      Seleccionar
+                    </button>
+                  </div>
               </td>
             </tr>
           </tbody>
