--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -24,11 +24,15 @@
         <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active"
               routerLink="admin/tipousuario/plist">Tipo Usuario</a>
-          </li>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLinkActive="active"
+              routerLink="admin/incidencia/plist">Incidencias</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active"
               routerLink="generate">Generate</a>
-          </li>
+        </li>
 
 
       </ul>
