crud accion completo y finder incidencia hecho

--- a/src/app/component/application/accion/routed/accion-delete-admin-routed/accion-delete-admin-routed.component.html
+++ b/src/app/component/application/accion/routed/accion-delete-admin-routed/accion-delete-admin-routed.component.html
@@ -1,12 +1,12 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col">
-            <h1 class="text-center mb-5">Borrado de la incidencia con id={{id}}</h1>
-            <app-incidencia-detail-admin-unrouted [id]="id"></app-incidencia-detail-admin-unrouted>
+            <h1 class="text-center mb-5">Borrado de la accion con id={{id}}</h1>
+            <app-accion-detail-admin-unrouted [id]="id"></app-accion-detail-admin-unrouted>
             <div class="d-grid gap-2 d-md-block mt-3 d-md-flex justify-content-md-center">
                 <div class="col-md-5 control-group text-center">
                     <div class="alert alert-danger my-3" role="alert">
-                        <h3>¿Está seguro que quiere borrar la incidencia?</h3>
+                        <h3>¿Está seguro que quiere borrar la accion?</h3>
                         <div class="d-grid gap-2 d-md-block mt-3 d-md-flex justify-content-md-center my-4">
                             <a class="btn btn-danger mx-2" (click)="removeOne()">
                                 SI</a>
