--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -31,6 +31,10 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active"
+              routerLink="admin/accion/plist">Acciones</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLinkActive="active"
               routerLink="generate">Generate</a>
         </li>
 
