--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -35,10 +35,12 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active"
+              routerLink="admin/evento/plist">Eventos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLinkActive="active"
               routerLink="generate">Generate</a>
         </li>
-
-
       </ul>
 
     </div>
