--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -39,6 +39,10 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLinkActive="active"
+              routerLink="admin/multimedia/plist">Multimedias</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLinkActive="active"
               routerLink="generate">Generate</a>
         </li>
       </ul>
