generate multimedia y mejora en el filtro del plist

--- a/src/app/component/shared/routed/generate/generate.component.html
+++ b/src/app/component/shared/routed/generate/generate.component.html
@@ -81,7 +81,21 @@
               </div>
             </td>
           </tr>
-
+          <tr>
+            <th>Multimedia</th>
+            <td class="text-center">{{nMultimedias}}</td>
+            <td class="text-center">
+              <div class="btn-group btn-group-sm" role="group" aria-label="Tools">
+                <button type="button" class="btn btn-success mx-2" (click)="generateMultimedias(10)">
+                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="bLoading"></span>
+                  10</button>
+                <button type="button" class="btn btn-success mx-2" (click)="generateMultimedias(100)">
+                  100</button>
+                <button type="button" class="btn btn-success mx-2" (click)="generateMultimedias(1000)">
+                  1000</button>
+              </div>
+            </td>
+          </tr>
       </tbody>
     </table>
   </div>
