icono arreglado, participacion plist y plist modal de eventos y usuarios

--- a/src/app/component/application/evento/routed/evento-plist-admin-routed/evento-plist-admin-routed.component.html
+++ b/src/app/component/application/evento/routed/evento-plist-admin-routed/evento-plist-admin-routed.component.html
@@ -25,7 +25,7 @@
               </th>
               <th (click)="setOrder('fecha')">Fecha</th>
               <th (click)="setOrder('descripcion')">Descripcion</th>
-              <th>Eventos</th>
+              <th>Usuarios</th>
             </tr>
           </thead>
           <tbody>
@@ -33,6 +33,7 @@
               <td>{{evento.id}}</td>
               <td>{{evento.fecha}}</td>
               <td>{{evento.descripcion}}</td>
+              <td (click)="openModalParticipacion(evento.id, evento.participaciones)">{{evento.participaciones}}</td>
               <td>
                 <div class="btn-group" role="group" aria-label="Herramientas">
                   <button class="btn btn-sm btn-primary" [routerLink]="['/admin/evento/view',evento.id]">
@@ -52,3 +53,40 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="Info" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">CasaMarruecos</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                {{msg}}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+  <div class="modal fade" id="openParticipacion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">{{modalTitle}}</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+
+          <app-participacion-plistusuario-admin-unrouted [id]="id_evento" (click)="closeParticipacionModal"></app-participacion-plistusuario-admin-unrouted>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
