--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -13,7 +13,7 @@
         <li class="nav-item" *ngIf="!strUserName">
           <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="login">Login</a>
         </li>
-        <li class="nav-item" >
+        <li class="nav-item" *ngIf="strUserName">
             <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="logout">Logout</a>
           </li>
         <li class="nav-item" *ngIf="strTipousuario=='1'">
