--- a/src/app/component/shared/unrouted/menu/menu.component.html
+++ b/src/app/component/shared/unrouted/menu/menu.component.html
@@ -13,9 +13,6 @@
         <li class="nav-item" *ngIf="!strUserName">
           <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="login">Login</a>
         </li>
-        <li class="nav-item" *ngIf="strUserName">
-            <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="logout">Logout</a>
-          </li>
         <li class="nav-item" *ngIf="strTipousuario=='1'">
           <a class="nav-link" aria-current="page" routerLinkActive="active"
             routerLink="admin/usuario/plist">Usuarios</a>
@@ -45,7 +42,16 @@
               routerLink="generate">Generate</a>
         </li>
       </ul>
-
     </div>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLinkActive="active" routerLink="user" *ngIf="strUserName">{{strUserName}}</a>
+          </li>
+          <li class="nav-item" *ngIf="strUserName">
+            <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/logout']">Logout</a>
+          </li>
+        </ul>
+      </div>
   </div>
 </nav>
