view usuario al hacer click en el nombre en menu

--- a/src/app/component/shared/routed/login/login.component.html
+++ b/src/app/component/shared/routed/login/login.component.html
@@ -25,7 +25,7 @@
               <div class="form-outline mb-3">
                 <label class="form-label" for="password">Password</label>
                 <input type="password" id="password" class="form-control" placeholder="Enter password" name="password"
-                  formControlName="username" />
+                  formControlName="password" />
               </div>
 
               <div class="text-center text-lg-start mt-4 pt-2">
